feat: add wordsearch game implementation and styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,6 +48,7 @@
 @import './gameFormModal.css';
 @import './themeSelection.css';
 @import './hangman.css';
+@import './wordsearch.css';
 @import './ranking.css';
 
 /* 16. Responsive - Load last to override as needed */
